# openscad-models-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config
libraries/dimdraw/: Cargo.toml  README.md
libraries/dimdraw/examples/: dims.rs  drawing.rs
libraries/dimdraw/src/: arrow.rs  constants.rs  cross.rs  dim_line.rs  drawing.rs  drawing_assembler.rs  drawing_builder.rs  leader_line.rs  lib.rs  line.rs  main.rs  object_assembler.rs  text.rs  title_block.rs
libraries/old-parts/: Cargo.toml
libraries/old-parts/src/: board.rs  board_dimensions.rs  lib.rs
libraries/parts/: Cargo.toml
libraries/parts/src/: assembler.rs  board.rs  common_functions.rs  cutout_frame.rs  lib.rs  macros.rs  prelude.rs  wall.rs
libraries/parts/src/utils/: board_dimensions.rs  color.rs  common_functions.rs  mod.rs  units.rs
libraries/scad-assembler/: Cargo.toml  README.md
libraries/scad-assembler/src/: lib.rs
libraries/scad-cli/: Cargo.toml
libraries/scad-cli/src/: lib.rs
new-template-project/: Cargo.toml  README.md
new-template-project/src/: main.rs
new-template-project/src/assemblies/: mod.rs  wall_frame.rs
sandbox/house/: Cargo.toml  README.md
sandbox/house/src/: config.rs  floor_joists.rs  foundation.rs  girders.rs  house.rs  main.rs  posts.rs
sandbox/house/stl/: house.stl
sandbox/rammed-earth/: Cargo.toml  README.md
sandbox/rammed-earth/src/: config.rs  doors.rs  foundation.rs  house.rs  inner_walls.rs  main.rs  outer_walls.rs  roof.rs
sandbox/rammed-earth/stl/: rammed-earth.stl
scripts/: openscad-runner
template-project/: Cargo.toml
template-project/src/: main.rs
wood-projects/base-frame/: Cargo.toml  README.md
wood-projects/base-frame/dxf/: long-board.dxf
wood-projects/base-frame/src/: boards.rs  config.rs  joinery.rs  main.rs  project_parts.rs
wood-projects/base-frame/src/assemblies/: base_frame.rs  mod.rs
wood-projects/base-frame/stl/: base-frame.stl  long-board.stl
wood-projects/couch/: Cargo.toml  README.md  template-project.scad
wood-projects/couch/src/: board.rs  board_dimensions.rs  common_functions.rs  config.rs  couch.rs  cutaway.rs  long_beam.rs  lower_short_beam.rs  main.rs  object_assembler.rs  post.rs  post_board.rs  support_plank.rs  upper_short_beam.rs
wood-projects/couch/stl/: couch.stl
wood-projects/slab-table/: Cargo.toml  README.md
wood-projects/slab-table/src/: config.rs  main.rs  post.rs  post_drawing.rs  slab.rs  slab_drawing.rs  slab_table.rs
wood-projects/slab-table/stl/: slab_table.stl
wood-projects/storage-shelves/: Cargo.toml  README.md
wood-projects/storage-shelves/src/: boards.rs  config.rs  joinery.rs  main.rs  project_parts.rs
wood-projects/storage-shelves/src/assemblies/: full_shelf.rs  half_shelf.rs  mod.rs  shelves.rs
wood-projects/storage-shelves/stl/: storage-shelves.stl
wood-projects/table/: Cargo.toml  README.md
wood-projects/table/dxf/: leg_board_jt0_back.dxf  leg_board_jt0_front.dxf  (+17 more)
(+32 files in other folders)
