[workspace]
members = [
    "libraries/parts",
    "libraries/scad-assembler",
    "new-template-project",
]

# TODO port these over to the new stuff
exclude = [
    "scripts/",
    "template-project",
    "libraries/dimdraw",
    "libraries/old-parts",
    "wood-projects/couch",
    "wood-projects/slab-table",
    "wood-projects/table",
    "sandbox/house",
    "sandbox/rammed-earth",
]
