[workspace]
members = [
    "libraries/parts",
    "new-template-project",
    "wood-projects/base-frame",
]

# TODO port these over to the new stuff
exclude = [
    "scripts/",
    "template-project",
    "libraries/dimdraw",
    "wood-projects/couch",
    "wood-projects/slab-table",
    "wood-projects/table",
    "sandbox/house",
    "sandbox/rammed-earth",
]
