[package]
name = "parts"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
#scad = "1.2"
nalgebra= "0.16"
approx = "0.3"
dimensioned = "0.7"

[dependencies.scad-assembler]
path = "../scad-assembler"

[dependencies.scad]
git = "https://github.com/jonlamb-gh/Rust-Scad.git"
branch = "more-modifier-characters"
